--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "mammoth": "^1.9.0",
