--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "crr-result-uploader",
+  "version": "1.0.0",
+  "description": "Uploads result PDFs, converts to text, and stores in MySQL",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
